# fin-mcp-server

./: .gitignore  README.md  config.yml  pyproject.toml
src/fin_mcp_server/: __main__.py  main.py  server.py
src/fin_mcp_server/stock/: stock.py  stock_feature.py
src/fin_mcp_server/utils/: env.py  image.py  llm.py  plot.py  spider.py
